// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@redbyte/rb-tokens > tokensToCSSVariables > matches snapshot for dark-neon 1`] = `
{
  "--rb-color-accent-100": "#ffe4e6",
  "--rb-color-accent-200": "#fecdd3",
  "--rb-color-accent-300": "#fda4af",
  "--rb-color-accent-400": "#fb7185",
  "--rb-color-accent-50": "#fff1f2",
  "--rb-color-accent-500": "#f43f5e",
  "--rb-color-accent-600": "#e11d48",
  "--rb-color-accent-700": "#be123c",
  "--rb-color-accent-800": "#9f1239",
  "--rb-color-accent-900": "#881337",
  "--rb-color-error-100": "#fee2e2",
  "--rb-color-error-200": "#fecaca",
  "--rb-color-error-300": "#fca5a5",
  "--rb-color-error-400": "#f87171",
  "--rb-color-error-50": "#fef2f2",
  "--rb-color-error-500": "#ef4444",
  "--rb-color-error-600": "#dc2626",
  "--rb-color-error-700": "#b91c1c",
  "--rb-color-error-800": "#991b1b",
  "--rb-color-error-900": "#7f1d1d",
  "--rb-color-info-100": "#dbeafe",
  "--rb-color-info-200": "#bfdbfe",
  "--rb-color-info-300": "#93c5fd",
  "--rb-color-info-400": "#60a5fa",
  "--rb-color-info-50": "#eff6ff",
  "--rb-color-info-500": "#3b82f6",
  "--rb-color-info-600": "#2563eb",
  "--rb-color-info-700": "#1d4ed8",
  "--rb-color-info-800": "#1e40af",
  "--rb-color-info-900": "#1e3a8a",
  "--rb-color-neutral-100": "#f1f5f9",
  "--rb-color-neutral-200": "#e2e8f0",
  "--rb-color-neutral-300": "#cbd5e1",
  "--rb-color-neutral-400": "#94a3b8",
  "--rb-color-neutral-50": "#f8fafc",
  "--rb-color-neutral-500": "#64748b",
  "--rb-color-neutral-600": "#475569",
  "--rb-color-neutral-700": "#334155",
  "--rb-color-neutral-800": "#1e293b",
  "--rb-color-neutral-900": "#0f172a",
  "--rb-color-success-100": "#dcfce7",
  "--rb-color-success-200": "#bbf7d0",
  "--rb-color-success-300": "#86efac",
  "--rb-color-success-400": "#4ade80",
  "--rb-color-success-50": "#f0fdf4",
  "--rb-color-success-500": "#22c55e",
  "--rb-color-success-600": "#16a34a",
  "--rb-color-success-700": "#15803d",
  "--rb-color-success-800": "#166534",
  "--rb-color-success-900": "#14532d",
  "--rb-color-warning-100": "#fef3c7",
  "--rb-color-warning-200": "#fde68a",
  "--rb-color-warning-300": "#fcd34d",
  "--rb-color-warning-400": "#fbbf24",
  "--rb-color-warning-50": "#fffbeb",
  "--rb-color-warning-500": "#f59e0b",
  "--rb-color-warning-600": "#d97706",
  "--rb-color-warning-700": "#b45309",
  "--rb-color-warning-800": "#92400e",
  "--rb-color-warning-900": "#78350f",
  "--rb-duration-fast": "150ms",
  "--rb-duration-instant": "50ms",
  "--rb-duration-normal": "250ms",
  "--rb-duration-slow": "400ms",
  "--rb-duration-slower": "600ms",
  "--rb-easing-bounce": "cubic-bezier(0.68, -0.55, 0.265, 1.55)",
  "--rb-easing-in": "cubic-bezier(0.4, 0, 1, 1)",
  "--rb-easing-inOut": "cubic-bezier(0.4, 0, 0.2, 1)",
  "--rb-easing-linear": "linear",
  "--rb-easing-out": "cubic-bezier(0, 0, 0.2, 1)",
  "--rb-font-family-mono": "ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas, "Liberation Mono", monospace",
  "--rb-font-family-sans": "system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif",
  "--rb-font-family-serif": "Georgia, Cambria, "Times New Roman", Times, serif",
  "--rb-font-size-2xl": "1.5rem",
  "--rb-font-size-3xl": "1.875rem",
  "--rb-font-size-4xl": "2.25rem",
  "--rb-font-size-5xl": "3rem",
  "--rb-font-size-6xl": "3.75rem",
  "--rb-font-size-base": "1rem",
  "--rb-font-size-lg": "1.125rem",
  "--rb-font-size-sm": "0.875rem",
  "--rb-font-size-xl": "1.25rem",
  "--rb-font-size-xs": "0.75rem",
  "--rb-font-weight-black": "900",
  "--rb-font-weight-bold": "700",
  "--rb-font-weight-extrabold": "800",
  "--rb-font-weight-light": "300",
  "--rb-font-weight-medium": "500",
  "--rb-font-weight-normal": "400",
  "--rb-font-weight-semibold": "600",
  "--rb-font-weight-thin": "100",
  "--rb-letter-spacing-normal": "0",
  "--rb-letter-spacing-tight": "-0.025em",
  "--rb-letter-spacing-tighter": "-0.05em",
  "--rb-letter-spacing-wide": "0.025em",
  "--rb-letter-spacing-wider": "0.05em",
  "--rb-letter-spacing-widest": "0.1em",
  "--rb-line-height-loose": "2",
  "--rb-line-height-none": "1",
  "--rb-line-height-normal": "1.5",
  "--rb-line-height-relaxed": "1.625",
  "--rb-line-height-snug": "1.375",
  "--rb-line-height-tight": "1.25",
  "--rb-radius-2xl": "1rem",
  "--rb-radius-3xl": "1.5rem",
  "--rb-radius-full": "9999px",
  "--rb-radius-lg": "0.5rem",
  "--rb-radius-md": "0.375rem",
  "--rb-radius-none": "0",
  "--rb-radius-sm": "0.125rem",
  "--rb-radius-xl": "0.75rem",
  "--rb-shadow-2xl": "0 25px 50px -12px rgb(0 0 0 / 0.25)",
  "--rb-shadow-inner": "inset 0 2px 4px 0 rgb(0 0 0 / 0.05)",
  "--rb-shadow-lg": "0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1)",
  "--rb-shadow-md": "0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1)",
  "--rb-shadow-none": "none",
  "--rb-shadow-sm": "0 1px 2px 0 rgb(0 0 0 / 0.05)",
  "--rb-shadow-xl": "0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1)",
  "--rb-spacing-0": "0",
  "--rb-spacing-1": "0.25rem",
  "--rb-spacing-10": "2.5rem",
  "--rb-spacing-12": "3rem",
  "--rb-spacing-16": "4rem",
  "--rb-spacing-2": "0.5rem",
  "--rb-spacing-20": "5rem",
  "--rb-spacing-24": "6rem",
  "--rb-spacing-3": "0.75rem",
  "--rb-spacing-32": "8rem",
  "--rb-spacing-4": "1rem",
  "--rb-spacing-40": "10rem",
  "--rb-spacing-48": "12rem",
  "--rb-spacing-5": "1.25rem",
  "--rb-spacing-56": "14rem",
  "--rb-spacing-6": "1.5rem",
  "--rb-spacing-64": "16rem",
  "--rb-spacing-7": "1.75rem",
  "--rb-spacing-8": "2rem",
  "--rb-spacing-9": "2.25rem",
}
`;

exports[`@redbyte/rb-tokens > tokensToCSSVariables > matches snapshot for light-frost 1`] = `
{
  "--rb-color-accent-100": "#dbeafe",
  "--rb-color-accent-200": "#bfdbfe",
  "--rb-color-accent-300": "#93c5fd",
  "--rb-color-accent-400": "#60a5fa",
  "--rb-color-accent-50": "#eff6ff",
  "--rb-color-accent-500": "#3b82f6",
  "--rb-color-accent-600": "#2563eb",
  "--rb-color-accent-700": "#1d4ed8",
  "--rb-color-accent-800": "#1e40af",
  "--rb-color-accent-900": "#1e3a8a",
  "--rb-color-error-100": "#991b1b",
  "--rb-color-error-200": "#b91c1c",
  "--rb-color-error-300": "#dc2626",
  "--rb-color-error-400": "#ef4444",
  "--rb-color-error-50": "#7f1d1d",
  "--rb-color-error-500": "#f87171",
  "--rb-color-error-600": "#fca5a5",
  "--rb-color-error-700": "#fecaca",
  "--rb-color-error-800": "#fee2e2",
  "--rb-color-error-900": "#fef2f2",
  "--rb-color-info-100": "#1e40af",
  "--rb-color-info-200": "#1d4ed8",
  "--rb-color-info-300": "#2563eb",
  "--rb-color-info-400": "#3b82f6",
  "--rb-color-info-50": "#1e3a8a",
  "--rb-color-info-500": "#60a5fa",
  "--rb-color-info-600": "#93c5fd",
  "--rb-color-info-700": "#bfdbfe",
  "--rb-color-info-800": "#dbeafe",
  "--rb-color-info-900": "#eff6ff",
  "--rb-color-neutral-100": "#1e293b",
  "--rb-color-neutral-200": "#334155",
  "--rb-color-neutral-300": "#475569",
  "--rb-color-neutral-400": "#64748b",
  "--rb-color-neutral-50": "#0f172a",
  "--rb-color-neutral-500": "#94a3b8",
  "--rb-color-neutral-600": "#cbd5e1",
  "--rb-color-neutral-700": "#e2e8f0",
  "--rb-color-neutral-800": "#f1f5f9",
  "--rb-color-neutral-900": "#f8fafc",
  "--rb-color-success-100": "#166534",
  "--rb-color-success-200": "#15803d",
  "--rb-color-success-300": "#16a34a",
  "--rb-color-success-400": "#22c55e",
  "--rb-color-success-50": "#14532d",
  "--rb-color-success-500": "#4ade80",
  "--rb-color-success-600": "#86efac",
  "--rb-color-success-700": "#bbf7d0",
  "--rb-color-success-800": "#dcfce7",
  "--rb-color-success-900": "#f0fdf4",
  "--rb-color-warning-100": "#92400e",
  "--rb-color-warning-200": "#b45309",
  "--rb-color-warning-300": "#d97706",
  "--rb-color-warning-400": "#f59e0b",
  "--rb-color-warning-50": "#78350f",
  "--rb-color-warning-500": "#fbbf24",
  "--rb-color-warning-600": "#fcd34d",
  "--rb-color-warning-700": "#fde68a",
  "--rb-color-warning-800": "#fef3c7",
  "--rb-color-warning-900": "#fffbeb",
  "--rb-duration-fast": "150ms",
  "--rb-duration-instant": "50ms",
  "--rb-duration-normal": "250ms",
  "--rb-duration-slow": "400ms",
  "--rb-duration-slower": "600ms",
  "--rb-easing-bounce": "cubic-bezier(0.68, -0.55, 0.265, 1.55)",
  "--rb-easing-in": "cubic-bezier(0.4, 0, 1, 1)",
  "--rb-easing-inOut": "cubic-bezier(0.4, 0, 0.2, 1)",
  "--rb-easing-linear": "linear",
  "--rb-easing-out": "cubic-bezier(0, 0, 0.2, 1)",
  "--rb-font-family-mono": "ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas, "Liberation Mono", monospace",
  "--rb-font-family-sans": "system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif",
  "--rb-font-family-serif": "Georgia, Cambria, "Times New Roman", Times, serif",
  "--rb-font-size-2xl": "1.5rem",
  "--rb-font-size-3xl": "1.875rem",
  "--rb-font-size-4xl": "2.25rem",
  "--rb-font-size-5xl": "3rem",
  "--rb-font-size-6xl": "3.75rem",
  "--rb-font-size-base": "1rem",
  "--rb-font-size-lg": "1.125rem",
  "--rb-font-size-sm": "0.875rem",
  "--rb-font-size-xl": "1.25rem",
  "--rb-font-size-xs": "0.75rem",
  "--rb-font-weight-black": "900",
  "--rb-font-weight-bold": "700",
  "--rb-font-weight-extrabold": "800",
  "--rb-font-weight-light": "300",
  "--rb-font-weight-medium": "500",
  "--rb-font-weight-normal": "400",
  "--rb-font-weight-semibold": "600",
  "--rb-font-weight-thin": "100",
  "--rb-letter-spacing-normal": "0",
  "--rb-letter-spacing-tight": "-0.025em",
  "--rb-letter-spacing-tighter": "-0.05em",
  "--rb-letter-spacing-wide": "0.025em",
  "--rb-letter-spacing-wider": "0.05em",
  "--rb-letter-spacing-widest": "0.1em",
  "--rb-line-height-loose": "2",
  "--rb-line-height-none": "1",
  "--rb-line-height-normal": "1.5",
  "--rb-line-height-relaxed": "1.625",
  "--rb-line-height-snug": "1.375",
  "--rb-line-height-tight": "1.25",
  "--rb-radius-2xl": "1rem",
  "--rb-radius-3xl": "1.5rem",
  "--rb-radius-full": "9999px",
  "--rb-radius-lg": "0.5rem",
  "--rb-radius-md": "0.375rem",
  "--rb-radius-none": "0",
  "--rb-radius-sm": "0.125rem",
  "--rb-radius-xl": "0.75rem",
  "--rb-shadow-2xl": "0 25px 50px -12px rgb(0 0 0 / 0.25)",
  "--rb-shadow-inner": "inset 0 2px 4px 0 rgb(0 0 0 / 0.05)",
  "--rb-shadow-lg": "0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1)",
  "--rb-shadow-md": "0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1)",
  "--rb-shadow-none": "none",
  "--rb-shadow-sm": "0 1px 2px 0 rgb(0 0 0 / 0.05)",
  "--rb-shadow-xl": "0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1)",
  "--rb-spacing-0": "0",
  "--rb-spacing-1": "0.25rem",
  "--rb-spacing-10": "2.5rem",
  "--rb-spacing-12": "3rem",
  "--rb-spacing-16": "4rem",
  "--rb-spacing-2": "0.5rem",
  "--rb-spacing-20": "5rem",
  "--rb-spacing-24": "6rem",
  "--rb-spacing-3": "0.75rem",
  "--rb-spacing-32": "8rem",
  "--rb-spacing-4": "1rem",
  "--rb-spacing-40": "10rem",
  "--rb-spacing-48": "12rem",
  "--rb-spacing-5": "1.25rem",
  "--rb-spacing-56": "14rem",
  "--rb-spacing-6": "1.5rem",
  "--rb-spacing-64": "16rem",
  "--rb-spacing-7": "1.75rem",
  "--rb-spacing-8": "2rem",
  "--rb-spacing-9": "2.25rem",
}
`;
